<resources>
    <string name="app_name">Ruleta de la Suerte</string>
    <string name="nointernet">Por favor, compruebe su conexión a internet e inténtelo de nuevo.</string>
    <string name="title">Ruleta de la Suerte</string>
    <string name="how_to_play">Cómo jugar</string>
    <string name="play_button">JUGAR</string>
    <string name="scoreboard_button">MARCADORES</string>
    <string name="menu_button">MENÚ</string>
    <string name="loading_scores">Cargando marcadores...</string>
    <string name="instructions">1. Pulsa el botón JUGAR para girar la ruleta.  2. Cada giro cuesta 10 monedas.  3. Gana o pierde monedas según el resultado.  4. Si llegas a 0 monedas, el juego termina.  5. Pulsa el botón ACABAR para finalizar el juego y ver tu puntuación.</string>
    <string name="end_game_button">ACABAR</string>
    <string name="WebView">WebView</string>
    <string name="Opciones">OPCIONES</string>
    <string name="ESPAÑOL">ESPAÑOL</string>
    <string name="CATALÀ">CATALÀ</string>
    <string name="ENLGISH">ENGLISH</string>
    <string name="GERMAN">GERMAN</string>
    <string name="OptionsTitle">OPCIONES</string>
    <string name="OPTIONS">OPCIONES</string>
    <string name="MUSICA">Cambiar música</string>
    <string name="MUSICAOG">MUSICA Original</string>
</resources>
