<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#51459E">

    <!-- Título -->


    <TextView

        android:id="@+id/OptionsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/OptionsTitle"
        android:textColor="@android:color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnIdiomaCatalà"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="372dp"
        android:background="@drawable/back1now"
        android:fontFamily="@font/aldrich"
        android:text="@string/CATALÀ"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnIdiomaEspañol"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="304dp"
        android:background="@drawable/back1now"
        android:fontFamily="@font/aldrich"
        android:text="@string/ESPAÑOL"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnIdiomaEnglish"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="440dp"
        android:background="@drawable/back1now"
        android:fontFamily="@font/aldrich"
        android:text="@string/ENLGISH"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnIdiomaGerman"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="508dp"
        android:background="@drawable/back1now"
        android:fontFamily="@font/aldrich"
        android:text="@string/GERMAN"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnElegirMúsica"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="224dp"
        android:background="@drawable/back1now"
        android:fontFamily="@font/aldrich"
        android:text="@string/MUSICA"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnMusicaOriginal"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="156dp"
        android:background="@drawable/back1now"
        android:fontFamily="@font/aldrich"
        android:text="@string/MUSICAOG"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:fontFamily="@font/aldrich"
        android:id="@+id/Menu"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/back1now"
        android:text="@string/menu_button"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

